# vids

./: .gitignore  AGENTS.md  PROXIMOS_PASSOS.md  README.md  docker-compose.yml  links.txt
.agent/: implementation_plan.md
backend/: .gitignore  Dockerfile  debug_ytdlp.py  poc_ytdlp.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/endpoints/: download.py
backend/app/core/: config.py
backend/app/schemas/: video.py
backend/app/services/: websocket_manager.py  ytdlp_service.py
backend/tests/: test_api_integration.py  test_services.py  test_ytdlp_service.py
docs/: ARCHITECTURE.md  GUIDES.md  README.md
external_tests/: links.txt  main.py  pyproject.toml  test_api_external.py
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts  proguard-rules.pro
frontend/integration_test/: app_test.dart
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/core/theme/: app_colors.dart  app_theme.dart
frontend/lib/shared/widgets/: glass_card.dart  glass_text_field.dart  primary_button.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/features/download/: download_provider_test.dart  download_provider_test.mocks.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
(+13 files in other folders)
