[project]
name = "vids-backend"
version = "0.1.0"
description = "YouTube Downloader Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "yt-dlp>=2024.04.09",
    "loguru>=0.7.2",
    "pydantic-settings",
    "websockets",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio",
    "httpx>=0.27.0",
]
