[project]
name = "vids-backend"
version = "0.1.0"
description = "YouTube Downloader Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "yt-dlp[default]>=2024.11.04",
    "loguru>=0.7.2",
    "pydantic-settings",
    "websockets",
    "curl-cffi<0.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
